--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+  font-family: "Montserrat", "Times New Roman", Times, serif;
   font-size: 1.6rem;
-  font-weight: 400;
+  font-weight: 300;
 }
