--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,19 +1,19 @@
 .footer {
   width: 100%;
   height: 4rem;
-  background-color: var(--color-tertiary);
+  background-color: var(--color-primary);
   position: absolute;
   bottom: 0;
   @include center;
 
   a {
-    color: var(--color-primary);
+    color: var(--color-text);
 
     span {
       font-weight: bold;
       transition: all 0.3s;
       &:hover {
-        color: var(--color-accent);
+        color: var(--color-secondary);
       }
     }
   }
