--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -1,13 +1,13 @@
 .navbar {
   width: 100%;
   height: 7rem;
-  background-color: var(--color-tertiary);
+  background-color: var(--color-primary);
   display: flex;
   align-items: center;
 
   h3 {
     font-size: 2rem;
-    color: var(--color-primary);
+    color: var(--color-text);
     margin: 0 3rem 0;
     display: flex;
     align-items: center;
