--- a/styles/Global.scss
+++ b/styles/Global.scss
@@ -4,27 +4,24 @@
 }
 
 body {
-  --color-primary: #f9f7f7;
-  --color-secondary: #dbe2ef;
-  --color-tertiary: #3f72af;
-  --color-accent: #112d4e;
+  --color-text: rgb(240, 240, 240);
+  --color-primary: #eb455f;
+  --color-secondary: #100720;
+  --color-tertiary: #fcffe7;
+  --color-accent: #131b4b;
 }
 
 .dark-mode body {
-  --color-primary: #112d4e;
-  --color-secondary: #dbe2ef;
-  --color-tertiary: #3f72af;
-  --color-accent: #f9f7f7;
-}
-
-.light-mode body {
-  --color-primary: #f9f7f7;
-  --color-secondary: #dbe2ef;
-  --color-tertiary: #3f72af;
-  --color-accent: #112d4e;
+  --color-text: rgb(240, 240, 240);
+  --color-primary: #100720;
+  --color-secondary: #eb455f;
+  --color-tertiary: #131b4b;
+  --color-accent: #fcffe7;
 }
 
 body {
+  color: var(--color-text);
+  background-color: var(--color-tertiary);
   max-width: 100vw;
   min-height: 100vh;
 }
