--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -4,6 +4,7 @@
   background-color: var(--color-primary);
   display: flex;
   align-items: center;
+  justify-content: space-between;
 
   h3 {
     font-size: 2rem;
