--- a/styles/Global.scss
+++ b/styles/Global.scss
@@ -1,5 +1,5 @@
 .container {
-  max-width: 128rem;
+  max-width: 130rem;
   margin: 0 auto;
 }
 
@@ -26,4 +26,5 @@ body {
   background-color: var(--color-tertiary);
   max-width: 100vw;
   min-height: 100vh;
+  position: relative;
 }
