[Feat]: add locale change button

--- a/styles/Global.scss
+++ b/styles/Global.scss
@@ -28,3 +28,24 @@ body {
   min-height: 100vh;
   position: relative;
 }
+
+// scroll bar
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--color-secondary);
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
